2006-02-06  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c: (bvw_bus_message_cb):
	  Merge tags in KEEP mode (we only pay attention to the first
	  item for each tag anyway).

2006-02-10  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* src/Makefile.am:
	* src/backend/Makefile.am: build fixes by Sylvain Bertrand
	<sylvain.bertrand@gmail.com> to look for libraries and headers in
	the specified paths before looking in the system paths
	(Closes: #330699)

2006-02-09  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (main): waiting cursor action on startup

2006-02-08  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_move_files):
	Don't reverse items when moving them down (Closes: #330399)

2006-02-07  Erdal Ronahi  <erdal.ronahi@gmail.com>

	* configure.in: Added ku (Kurdish) to ALL_LINGUAS

2006-02-06  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_add_asf):
	Fix retval not being ignored (Closes: #330159)

2006-02-06  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/backend/bacon-video-widget-gst-0.10.c: (fixate_to_num),
	(set_audio_filter):
	Fix problems with setting the speaker arrangment as pointed out 
	by Tim - that it will fail when selecting '5.1' output against 
	a sound card that only supports stereo.

2006-02-06  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_can_play), (bacon_video_widget_get_mrls):
	  Don't claim to be able to play back DVDs when we aren't
	  (for now, at least) (#330086, patch by: Fernando Herrera).

2006-02-06  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_add_asf),
	(totem_pl_parser_parse_internal): Fix logic in the ASF parser,
	we were doing work on the data even though we didn't have any,
	don't look for super mime-types to ignore when we don't have one
	(Closes: #330120)