@@ -1,3 +1,11 @@
+2006-02-11  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* src/backend/bacon-video-widget-gst-0.10.c:
+	(bacon_video_widget_expose_event), (setup_vis),
+	(bacon_video_widget_set_visuals):
+	  Draw logo if there's only audio and visualisation
+	  is disabled. Add some more debug messages.
+
 2006-02-06  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c: (bvw_bus_message_cb):
